--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,11 +14,14 @@ molecule:
   retry: 1
   parallel:
     matrix:
-      # TODO: restore on timezone build
       - image: "docker-ubuntu-systemd"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
+        tag: "bionic"
+      - image: "docker-ubuntu-systemd"
         tag: "focal"
+      - image: "enterpriselinux"
+        tag: "7"
       - image: "enterpriselinux"
         tag: "latest"
       - image: "debian-systemd"
