--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,7 +10,8 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - all
+        - bionic
+        - focal
     - name: EL
       versions:
         - all
