--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,13 +9,19 @@ variables:
   PY_COLORS: 1
 
 molecule:
+  stage: build
   script:
     - image=${image} tag=${tag} molecule test
+  artifacts:
+    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_NAME"
+    paths:
+      - /
+    expire_in: 1 day
   retry: 1
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
-        tag: "latest"
+        tag: "bionic"
       - image: "docker-ubuntu-systemd"
         tag: "focal"
       - image: "enterpriselinux"
@@ -30,8 +36,12 @@ molecule:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
+      - image: "docker-opensuse-systemd"
+        tag: "latest"
 
 testing:
+  stage: test
+  needs: []
   script:
     - image=${image} tag=${tag} molecule test
   rules:
@@ -40,8 +50,6 @@ testing:
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
-        tag: "latest"
-      - image: "docker-ubuntu-systemd"
         tag: "bionic"
       - image: "docker-ubuntu-systemd"
         tag: "focal"
@@ -57,20 +65,24 @@ testing:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
+      - image: "docker-opensuse-systemd"
+        tag: "latest"
 
 galaxy:
+  stage: deploy
+  needs: []
   script:
     - ansible-galaxy role info buluma.gitlab_ee
 
 role_testing:
+  stage: test
+  needs: []
   script:
     - image=${image} tag=${tag} ansible-galaxy install buluma.gitlab_ee
   retry: 1
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
-        tag: "latest"
-      - image: "docker-ubuntu-systemd"
         tag: "bionic"
       - image: "docker-ubuntu-systemd"
         tag: "focal"
@@ -86,3 +98,18 @@ role_testing:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
+      - image: "docker-opensuse-systemd"
+        tag: "latest"
+
+release_job:
+  stage: .post
+  needs: [molecule]
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  rules:
+    - if: $CI_COMMIT_TAG
+  script:
+    - echo "Running the release job."
+  release:
+    tag_name: $CI_COMMIT_TAG
+    name: 'Release $CI_COMMIT_TAG'
+    description: 'Release created using the release-cli.'
