--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,48 +12,14 @@ molecule:
   stage: build
   script:
     - image=${image} tag=${tag} molecule test
-  artifacts:
-    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_NAME"
-    paths:
-      - /
-    expire_in: 1 day
   retry: 1
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
-        tag: "focal"
-      - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
         tag: "latest"
-      - image: "debian-systemd"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "bookworm"
-      - image: "fedora-systemd"
-        tag: "34"
-      - image: "fedora-systemd"
-        tag: "latest"
-
-testing:
-  stage: test
-  needs: []
-  script:
-    - image=${image} tag=${tag} molecule test
-  rules:
-    - if: $CI_COMMIT_REF_NAME == "testing"
-  retry: 1
-  parallel:
-    matrix:
-      - image: "docker-ubuntu-systemd"
-        tag: "bionic"
       - image: "docker-ubuntu-systemd"
         tag: "focal"
       - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
-        tag: "latest"
-      - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
         tag: "bookworm"
@@ -63,6 +29,51 @@ testing:
         tag: "latest"
       - image: "docker-opensuse-systemd"
         tag: "latest"
+      - image: "centos-systemd"
+        tag: "7"
+      - image: "centos-systemd"
+        tag: "latest"
+      - image: "centos-systemd"
+        tag: "systemd"
+      - image: "oraclelinux"
+        tag: "7"
+      - image: "oraclelinux"
+        tag: "8"
+
+testing:
+  stage: test
+  needs: []
+  script:
+    - image=${image} tag=${tag} molecule -v test
+  rules:
+    - if: $CI_COMMIT_REF_NAME == "testing"
+  retry: 1
+  parallel:
+    matrix:
+      - image: "docker-ubuntu-systemd"
+        tag: "latest"
+      - image: "docker-ubuntu-systemd"
+        tag: "focal"
+      - image: "enterpriselinux"
+        tag: "latest"
+      - image: "debian-systemd"
+        tag: "bookworm"
+      - image: "fedora-systemd"
+        tag: "34"
+      - image: "fedora-systemd"
+        tag: "latest"
+      - image: "docker-opensuse-systemd"
+        tag: "latest"
+      - image: "centos-systemd"
+        tag: "7"
+      - image: "centos-systemd"
+        tag: "latest"
+      - image: "centos-systemd"
+        tag: "systemd"
+      - image: "oraclelinux"
+        tag: "7"
+      - image: "oraclelinux"
+        tag: "8"
 
 galaxy:
   stage: deploy
@@ -79,14 +90,10 @@ role_testing:
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
-        tag: "bionic"
+        tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "focal"
       - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
-        tag: "latest"
-      - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
         tag: "bookworm"
@@ -96,6 +103,16 @@ role_testing:
         tag: "latest"
       - image: "docker-opensuse-systemd"
         tag: "latest"
+      - image: "centos-systemd"
+        tag: "7"
+      - image: "centos-systemd"
+        tag: "latest"
+      - image: "centos-systemd"
+        tag: "systemd"
+      - image: "oraclelinux"
+        tag: "7"
+      - image: "oraclelinux"
+        tag: "8"
 
 release_job:
   stage: .post
@@ -109,3 +126,8 @@ release_job:
     tag_name: $CI_COMMIT_TAG
     name: 'Release $CI_COMMIT_TAG'
     description: 'Release created using the release-cli.'
+  artifacts:
+    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_NAME"
+    paths:
+      - /
+    expire_in: 1 day
