--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,70 +10,63 @@ variables:
 
 molecule:
   stage: build
+  allow_failure: true
   script:
     - image=${image} tag=${tag} molecule test
   retry: 1
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
-        tag: "latest"
+        tag: "bionic"
       - image: "docker-ubuntu-systemd"
         tag: "focal"
       - image: "enterpriselinux"
+        tag: "7"
+      - image: "enterpriselinux"
+        tag: "latest"
+      - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
         tag: "bookworm"
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
+        tag: "35"
+      - image: "fedora-systemd"
         tag: "latest"
       - image: "docker-opensuse-systemd"
         tag: "latest"
-      - image: "centos-systemd"
-        tag: "7"
-      - image: "centos-systemd"
-        tag: "latest"
-      - image: "centos-systemd"
-        tag: "systemd"
-      - image: "oraclelinux"
-        tag: "7"
-      - image: "oraclelinux"
-        tag: "8"
 
 testing:
   stage: test
   needs: []
   script:
-    - image=${image} tag=${tag} molecule -v test
+    - image=${image} tag=${tag} molecule test
   rules:
     - if: $CI_COMMIT_REF_NAME == "testing"
   retry: 1
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
-        tag: "latest"
+        tag: "bionic"
       - image: "docker-ubuntu-systemd"
         tag: "focal"
       - image: "enterpriselinux"
+        tag: "7"
+      - image: "enterpriselinux"
+        tag: "latest"
+      - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
         tag: "bookworm"
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
+        tag: "35"
+      - image: "fedora-systemd"
         tag: "latest"
       - image: "docker-opensuse-systemd"
         tag: "latest"
-      - image: "centos-systemd"
-        tag: "7"
-      - image: "centos-systemd"
-        tag: "latest"
-      - image: "centos-systemd"
-        tag: "systemd"
-      - image: "oraclelinux"
-        tag: "7"
-      - image: "oraclelinux"
-        tag: "8"
 
 galaxy:
   stage: deploy
@@ -90,29 +83,25 @@ role_testing:
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
-        tag: "latest"
+        tag: "bionic"
       - image: "docker-ubuntu-systemd"
         tag: "focal"
       - image: "enterpriselinux"
+        tag: "7"
+      - image: "enterpriselinux"
+        tag: "latest"
+      - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
         tag: "bookworm"
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
+        tag: "35"
+      - image: "fedora-systemd"
         tag: "latest"
       - image: "docker-opensuse-systemd"
         tag: "latest"
-      - image: "centos-systemd"
-        tag: "7"
-      - image: "centos-systemd"
-        tag: "latest"
-      - image: "centos-systemd"
-        tag: "systemd"
-      - image: "oraclelinux"
-        tag: "7"
-      - image: "oraclelinux"
-        tag: "8"
 
 release_job:
   stage: .post
