--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -6,11 +6,18 @@
 name: Ansible Molecule
 
 on:
-  # Schedule updates (once daily)
+  # Schedule updates (once weekly)
   schedule:
-    - cron: '13 7 * * *'
+    - cron: '13 7/9 * * 6,1'
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push:
+    branches:
+      - master
+      - main
+      - testing
+    paths-ignore:
+      - '**/README.md'
+      - '**/CHANGELOG.md'
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -43,6 +50,8 @@ jobs:
           - image: "enterpriselinux"
             tag: "7"
           - image: "enterpriselinux"
+            tag: "8"
+          - image: "enterpriselinux"
             tag: "latest"
           - image: "debian-systemd"
             tag: "latest"
@@ -50,6 +59,8 @@ jobs:
             tag: "bookworm"
           - image: "fedora-systemd"
             tag: "35"
+          - image: "fedora-systemd"
+            tag: "34"
           - image: "fedora-systemd"
             tag: "latest"
           - image: "docker-opensuse-systemd"
