--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,10 @@ molecule:
   stage: build
   allow_failure: true
   script:
-    - image=${image} tag=${tag} molecule test
+    - if [ -f tox.ini ] ; then tox ; fi
+    - if [ ! -f tox.ini ] ; then molecule test ; fi
+  rules:
+    - if: $CI_COMMIT_REF_NAME == "master"
   retry: 1
   parallel:
     matrix:
@@ -23,6 +26,8 @@ molecule:
       - image: "enterpriselinux"
         tag: "7"
       - image: "enterpriselinux"
+        tag: "8"
+      - image: "enterpriselinux"
         tag: "latest"
       - image: "debian-systemd"
         tag: "latest"
@@ -30,6 +35,8 @@ molecule:
         tag: "bookworm"
       - image: "fedora-systemd"
         tag: "35"
+      - image: "fedora-systemd"
+        tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
       - image: "docker-opensuse-systemd"
@@ -39,7 +46,8 @@ testing:
   stage: test
   needs: []
   script:
-    - image=${image} tag=${tag} molecule test
+    - if [ -f tox.ini ] ; then tox ; fi
+    - if [ ! -f tox.ini ] ; then molecule test ; fi
   rules:
     - if: $CI_COMMIT_REF_NAME == "testing"
   retry: 1
@@ -52,6 +60,8 @@ testing:
       - image: "enterpriselinux"
         tag: "7"
       - image: "enterpriselinux"
+        tag: "8"
+      - image: "enterpriselinux"
         tag: "latest"
       - image: "debian-systemd"
         tag: "latest"
@@ -59,60 +69,9 @@ testing:
         tag: "bookworm"
       - image: "fedora-systemd"
         tag: "35"
-      - image: "fedora-systemd"
-        tag: "latest"
-      - image: "docker-opensuse-systemd"
-        tag: "latest"
-
-galaxy:
-  stage: deploy
-  needs: []
-  script:
-    - ansible-galaxy role info buluma.gitlab_ee
-
-role_testing:
-  stage: test
-  needs: []
-  script:
-    - image=${image} tag=${tag} ansible-galaxy install buluma.gitlab_ee
-  retry: 1
-  parallel:
-    matrix:
-      - image: "docker-ubuntu-systemd"
-        tag: "bionic"
-      - image: "docker-ubuntu-systemd"
-        tag: "focal"
-      - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "bookworm"
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
-        tag: "35"
-      - image: "fedora-systemd"
         tag: "latest"
       - image: "docker-opensuse-systemd"
         tag: "latest"
-
-release_job:
-  stage: .post
-  needs: [molecule]
-  image: registry.gitlab.com/gitlab-org/release-cli:latest
-  rules:
-    - if: $CI_COMMIT_TAG
-  script:
-    - echo "Running the release job."
-  release:
-    tag_name: $CI_COMMIT_TAG
-    name: 'Release $CI_COMMIT_TAG'
-    description: 'Release created using the release-cli.'
-  artifacts:
-    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_NAME"
-    paths:
-      - /
-    expire_in: 1 day
