--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -8,7 +8,7 @@
       - setuptools
       - dataclasses
 
-- name: rpm --import
+- name: Rpm --import
   ansible.builtin.rpm_key:
     key: "{{ item.key }}"
     fingerprint: "{{ item.fingerprint }}"
@@ -17,7 +17,7 @@
   register: result
   until: result is succeeded
 
-- name: yum-config-manager --add-repo
+- name: Yum-config-manager --add-repo
   ansible.builtin.yum_repository:
     file: "{{ item.file }}"
     name: "{{ item.name }}"
@@ -31,7 +31,7 @@
     state: "{{ item.state }}"
   loop: "{{ _yum_repository }}"
 
-- name: yum versionlock delete
+- name: Yum versionlock delete
   community.general.yum_versionlock:
     name: "{{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\\..*$', '\\1-*') }}"
     state: "absent"
@@ -40,7 +40,7 @@
   changed_when: false
   failed_when: false
 
-- name: yum install
+- name: Yum install
   ansible.builtin.yum:
     name: "{{ item.name }}"
     state: "{{ item.state }}"
@@ -48,10 +48,10 @@
   register: result
   until: result is succeeded
   notify:
-    - gitlab_ee | gitlab-ctl reconfigure
-    - gitlab_ee | systemctl restart gitlab-runsvdir.service
+    - Gitlab_ee | gitlab-ctl reconfigure
+    - Gitlab_ee | systemctl restart gitlab-runsvdir.service
 
-- name: yum versionlock add
+- name: Yum versionlock add
   community.general.yum_versionlock:
     name: "{{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\\..*$', '\\1-*') }}"
     state: "present"
