--- a/tasks/suse.yml
+++ b/tasks/suse.yml
@@ -8,7 +8,7 @@
       - setuptools
       - dataclasses
 
-- name: rpm --import
+- name: Rpm --import
   vars:
     ansible_python_interpreter: "python3"
   ansible.builtin.rpm_key:
@@ -19,7 +19,7 @@
   register: result
   until: result is succeeded
 
-- name: yum-config-manager --add-repo
+- name: Yum-config-manager --add-repo
   ansible.builtin.yum_repository:
     file: "{{ item.file }}"
     name: "{{ item.name }}"
@@ -34,14 +34,14 @@
     reposdir: "{{ item.reposdir | default('/etc/zypp/repos.d') }}"
   loop: "{{ _yum_repository }}"
 
-- name: zypper removelock
+- name: Zypper removelock
   ansible.builtin.command: zypper removelock {{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\..*$', '\1-*') }}
   loop: "{{ _zypper }}"
   when: item.state == "present"
   changed_when: false
   failed_when: false
 
-- name: zypper install
+- name: Zypper install
   vars:
     ansible_python_interpreter: "python3"
   ansible.builtin.zypper:
@@ -51,10 +51,10 @@
   register: result
   until: result is succeeded
   notify:
-    - gitlab_ee | gitlab-ctl reconfigure
-    - gitlab_ee | systemctl restart gitlab-runsvdir.service
+    - Gitlab_ee | gitlab-ctl reconfigure
+    - Gitlab_ee | systemctl restart gitlab-runsvdir.service
 
-- name: zypper addlock
+- name: Zypper addlock
   ansible.builtin.command: zypper addlock {{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\..*$', '\1-*') }}
   loop: "{{ _zypper }}"
   when: item.state == "present"
