--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,9 +21,10 @@ galaxy_info:
     - name: Fedora
       versions:
         - all
-    - name: OpenSUSE
+    - name: opensuse
       versions:
         - all
   galaxy_tags:
     - system
+    - gitab
 dependencies: []
