--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,4 +5,4 @@
 repository:
   description: Ansible Role for GitLab EE Installation
   homepage: https://buluma.github.io/
-  topics: system, ansible, molecule, tox, playbook, hacktoberfest
+  topics: system, gitab, ansible, molecule, tox, playbook
