--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -6,11 +6,19 @@
 name: Ansible Molecule
 
 on:
-  # Schedule updates (once daily)
+  push:
+    branches:
+      - master
+      - main
+      - testing
+    paths-ignore:
+      - '**/README.md'
+      - '**/CHANGELOG.md'
+    tags_ignore:
+      - '*'
+  pull_request:
   schedule:
-    - cron: '13 7 * * *'
-  workflow_dispatch:
-  push: {branches: ["master", "main"]}
+    - cron: '13 7 7 * *'
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -39,13 +47,15 @@ jobs:
           - image: "enterpriselinux"
             tag: "7"
           - image: "enterpriselinux"
+            tag: "8"
+          - image: "enterpriselinux"
             tag: "latest"
           - image: "debian-systemd"
             tag: "latest"
-          - image: "debian-systemd"
-            tag: "bookworm"
           - image: "fedora-systemd"
-            tag: "35"
+            tag: "36"
+          - image: "fedora-systemd"
+            tag: "37"
           - image: "fedora-systemd"
             tag: "latest"
           - image: "docker-opensuse-systemd"
@@ -60,7 +70,7 @@ jobs:
       - name: parse apparmor for mysql
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: molecule
-        uses: buluma/molecule-action@v5.0.4
+        uses: buluma/molecule-action@v5.0.7
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
