--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,48 +1,15 @@
 ---
-image: "buluma/github-action-molecule:4.0.7"
-
-services:
-  - docker:dind
+image: "buluma/github-action-molecule:5.0.7"
 
 variables:
-  DOCKER_HOST: "tcp://docker:2375"
   PY_COLORS: 1
 
 molecule:
-  stage: build
-  allow_failure: true
   script:
-    - image=${image} tag=${tag} molecule test
-  retry: 1
-  parallel:
-    matrix:
-      - image: "docker-ubuntu-systemd"
-        tag: "bionic"
-      - image: "docker-ubuntu-systemd"
-        tag: "focal"
-      - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "bookworm"
-      - image: "fedora-systemd"
-        tag: "35"
-      - image: "fedora-systemd"
-        tag: "latest"
-      - image: "docker-opensuse-systemd"
-        tag: "latest"
-
-testing:
-  stage: test
-  needs: []
-  script:
-    - image=${image} tag=${tag} molecule test
+    - if [ -f tox.ini ] ; then tox ; fi
+    - if [ ! -f tox.ini ] ; then molecule test ; fi
   rules:
-    - if: $CI_COMMIT_REF_NAME == "testing"
-  retry: 1
+    - if: $CI_COMMIT_REF_NAME == "master"
   parallel:
     matrix:
       - image: "docker-ubuntu-systemd"
@@ -52,67 +19,22 @@ testing:
       - image: "enterpriselinux"
         tag: "7"
       - image: "enterpriselinux"
+        tag: "8"
+      - image: "enterpriselinux"
         tag: "latest"
       - image: "debian-systemd"
         tag: "latest"
-      - image: "debian-systemd"
-        tag: "bookworm"
       - image: "fedora-systemd"
-        tag: "35"
+        tag: "36"
+      - image: "fedora-systemd"
+        tag: "37"
       - image: "fedora-systemd"
         tag: "latest"
       - image: "docker-opensuse-systemd"
         tag: "latest"
 
 galaxy:
-  stage: deploy
-  needs: []
   script:
-    - ansible-galaxy role info buluma.gitlab_ee
-
-role_testing:
-  stage: test
-  needs: []
-  script:
-    - image=${image} tag=${tag} ansible-galaxy install buluma.gitlab_ee
-  retry: 1
-  parallel:
-    matrix:
-      - image: "docker-ubuntu-systemd"
-        tag: "bionic"
-      - image: "docker-ubuntu-systemd"
-        tag: "focal"
-      - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "latest"
-      - image: "debian-systemd"
-        tag: "bookworm"
-      - image: "fedora-systemd"
-        tag: "34"
-      - image: "fedora-systemd"
-        tag: "35"
-      - image: "fedora-systemd"
-        tag: "latest"
-      - image: "docker-opensuse-systemd"
-        tag: "latest"
-
-release_job:
-  stage: .post
-  needs: [molecule]
-  image: registry.gitlab.com/gitlab-org/release-cli:latest
+    - ansible-galaxy role import --api-key ${GALAXY_API_KEY} buluma ${CI_PROJECT_NAME}
   rules:
-    - if: $CI_COMMIT_TAG
-  script:
-    - echo "Running the release job."
-  release:
-    tag_name: $CI_COMMIT_TAG
-    name: 'Release $CI_COMMIT_TAG'
-    description: 'Release created using the release-cli.'
-  artifacts:
-    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_NAME"
-    paths:
-      - /
-    expire_in: 1 day
+    - if: $CI_COMMIT_TAG != null
