--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,12 +6,11 @@ galaxy_info:
   description: Ansible Role for GitLab EE Installation
   company: ShadowNet
   license: Apache-2.0
-  min_ansible_version: "4.10"
+  min_ansible_version: "2.12"
   platforms:
     - name: Ubuntu
       versions:
-        - bionic
-        - focal
+        - all
     - name: EL
       versions:
         - all
