--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,16 +1,17 @@
 ---
-- hosts: all
+- name: Verify
+  hosts: all
   remote_user: root
   become: true
   tasks:
-    - name: gitlab --version
+    - name: Gitlab --version
       environment:
         PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       ansible.builtin.command: gitlab --version
       register: result
       changed_when: result is not succeeded
 
-    - name: gitlab-rake gitlab:env:info
+    - name: Gitlab-rake gitlab:env:info
       ansible.builtin.command: gitlab-rake gitlab:env:info
       register: result
       changed_when: result is not succeeded
