--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -39,10 +39,10 @@
       changed_when: false
       failed_when: false
 
-- hosts: all
-  remote_user: root
-  become: true
-  tasks:
+# - hosts: all
+#   remote_user: root
+#   become: true
+  # tasks:
     - name: Cp -rfT /etc/skel /root
       ansible.builtin.raw: |
         set -eu
